Adding content and basic styles

--- a/index.html
+++ b/index.html
@@ -10,13 +10,96 @@
 </head>
 
 <body>
-    <header></header>
+    <header><img src="./assets/img/logo.svg" width="144px" height="40px" alt="Logo Muse"></header>
     <main>
-        <section class="hero"></section>
-        <section class="products"></section>
-        <section class="socials"></section>
+        <section class="hero">
+            <h1>Muse Group Frontend Academy</h1>
+            <p class="b1">
+                Our academy offers a transformative learning experience designed to empower you with the skills and
+                knowledge needed to succeed in the ever-evolving field of frontend development.
+            </p>
+            <img src="./assets/img/heroImage.png" width="640px" alt="Hero image">
+            <p class="b2">Are you ready to turn your passion for technology into a thriving career?</p>
+            <div class="invite-form">
+                <input type="email" name="email" />
+                <button>Join</button>
+            </div>
+        </section>
+        <section class="products">
+            <h1>Our products</h1>
+            <div class="blog-list">
+                <div class="card">
+                    <div class="portrait">
+                        <div class="rectangle ultimate-guitar"></div>
+                        <div class="title-subtitle">
+                            <h4>Ultimate Guitar</h4>
+                            <p class="b1">
+                                The best platform for music makers to play songs they love. Home to the world's largest
+                                music community.
+                            </p>
+                        </div>
+                        <button>Read more</button>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="portrait">
+                        <div class="rectangle muse-score"></div>
+                        <div class="title-subtitle">
+                            <h4>MuseScore</h4>
+                            <p class="b1">
+                                Create, play back, and print sheet music with free open source notation software.
+                            </p>
+                        </div>
+                        <button>Read more</button>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="portrait">
+                        <div class="rectangle audio-com"></div>
+                        <div class="title-subtitle">
+                            <h4>audio.com</h4>
+                            <p class="b1">
+                                The easiest way to share any sound online.
+                            </p>
+                        </div>
+                        <button>Read more</button>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="portrait">
+                        <div class="rectangle audacity"></div>
+                        <div class="title-subtitle">
+                            <h4>Audacity</h4>
+                            <p class="b1">
+                                The world's most popular audio editing and recording app.
+                            </p>
+                        </div>
+                        <button>Read more</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="socials">
+            <div class="social-icons">
+                <a href="#" target="_blank"><span class="instagram"></a>
+                <a href="#" target="_blank"><span class="telegram"></a>
+                <a href="#" target="_blank"><span class="linkedIn"></a>
+                <a href="#" target="_blank"><span class="facebook"></a>
+            </div>
+            <p class="b2">
+                You're not just a student - you're part of a vibrant community of like-minded individuals united by a
+                passion for frontend development. Collaborate, innovate, and grow alongside fellow learners and industry
+                professionals as you embark on this exciting journey together.
+            </p>
+        </section>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="additional-info">
+            <a class="b3" href="#" target="_blank">Help Center</a>
+            <a class="b3" href="#" target="_blank">Privacy Policy</a>
+            <a class="b3" href="#" target="_blank">Terms of Service</a>
+        </div>
+    </footer>
 </body>
 
 </html>
