Styling header and hero section

--- a/index.html
+++ b/index.html
@@ -10,19 +10,21 @@
 </head>
 
 <body>
-    <header><img src="./assets/img/logo.svg" width="144px" height="40px" alt="Logo Muse"></header>
+    <header><img src="./assets/img/logo.svg" alt="Logo Muse"></header>
     <main>
         <section class="hero">
-            <h1>Muse Group Frontend Academy</h1>
-            <p class="b1">
-                Our academy offers a transformative learning experience designed to empower you with the skills and
-                knowledge needed to succeed in the ever-evolving field of frontend development.
-            </p>
-            <img src="./assets/img/heroImage.png" width="640px" alt="Hero image">
-            <p class="b2">Are you ready to turn your passion for technology into a thriving career?</p>
-            <div class="invite-form">
-                <input type="email" name="email" />
-                <button>Join</button>
+            <div class="hero-content">
+                <h1>Muse Group Frontend Academy</h1>
+                <p class="b1">
+                    Our academy offers a transformative learning experience designed to empower you with the skills and
+                    knowledge needed to succeed in the ever-evolving field of frontend development.
+                </p>
+                <img src="./assets/img/heroImage.png" alt="Man enjoying playing the guitar">
+                <p class="b2">Are you ready to turn your passion for technology into a thriving career?</p>
+                <div class="invite-form">
+                    <input type="email" name="email" placeholder="Email" />
+                    <button class="b2">Join<img src="./assets/icons/arrowRight.svg"></button>
+                </div>
             </div>
         </section>
         <section class="products">
@@ -81,10 +83,10 @@
         </section>
         <section class="socials">
             <div class="social-icons">
-                <a href="#" target="_blank"><span class="instagram"></a>
-                <a href="#" target="_blank"><span class="telegram"></a>
-                <a href="#" target="_blank"><span class="linkedIn"></a>
-                <a href="#" target="_blank"><span class="facebook"></a>
+                <a href="#" target="_blank"><img src="./assets/socials/instagram.svg"></a>
+                <a href="#" target="_blank"><img src="./assets/socials/telegram.svg"></a>
+                <a href="#" target="_blank"><img src="./assets/socials/linkedIn.svg"></a>
+                <a href="#" target="_blank"><img src="./assets/socials/facebook.svg"></a>
             </div>
             <p class="b2">
                 You're not just a student - you're part of a vibrant community of like-minded individuals united by a
