Styling products, socials and footer

--- a/index.html
+++ b/index.html
@@ -23,76 +23,80 @@
                 <p class="b2">Are you ready to turn your passion for technology into a thriving career?</p>
                 <div class="invite-form">
                     <input type="email" name="email" placeholder="Email" />
-                    <button class="b2">Join<img src="./assets/icons/arrowRight.svg"></button>
+                    <button class="b2">Join<img src="./assets/icons/arrowRight.svg" alt="Arrow right icon"></button>
                 </div>
             </div>
         </section>
-        <section class="products">
-            <h1>Our products</h1>
-            <div class="blog-list">
-                <div class="card">
-                    <div class="portrait">
+        <section>
+            <div class="products">
+                <h1>Our products</h1>
+                <div class="blog-list">
+                    <div class="card">
                         <div class="rectangle ultimate-guitar"></div>
-                        <div class="title-subtitle">
-                            <h4>Ultimate Guitar</h4>
-                            <p class="b1">
-                                The best platform for music makers to play songs they love. Home to the world's largest
-                                music community.
-                            </p>
+                        <div class="portrait">
+                            <div class="title-subtitle">
+                                <h4>Ultimate Guitar</h4>
+                                <p class="b1">
+                                    The best platform for music makers to play songs they love. Home to the world's
+                                    largest music community.
+                                </p>
+                            </div>
+                            <button class="b2">Read more<span class="chevron-icon"></button>
                         </div>
-                        <button>Read more</button>
                     </div>
-                </div>
-                <div class="card">
-                    <div class="portrait">
+                    <div class="card">
                         <div class="rectangle muse-score"></div>
-                        <div class="title-subtitle">
-                            <h4>MuseScore</h4>
-                            <p class="b1">
-                                Create, play back, and print sheet music with free open source notation software.
-                            </p>
+                        <div class="portrait">
+                            <div class="title-subtitle">
+                                <h4>MuseScore</h4>
+                                <p class="b1">
+                                    Create, play back, and print sheet music with free open source notation software.
+                                </p>
+                            </div>
+                            <button class="b2">Read more<span class="chevron-icon"></button>
                         </div>
-                        <button>Read more</button>
                     </div>
-                </div>
-                <div class="card">
-                    <div class="portrait">
+                    <div class="card">
                         <div class="rectangle audio-com"></div>
-                        <div class="title-subtitle">
-                            <h4>audio.com</h4>
-                            <p class="b1">
-                                The easiest way to share any sound online.
-                            </p>
+                        <div class="portrait">
+                            <div class="title-subtitle">
+                                <h4>audio.com</h4>
+                                <p class="b1">
+                                    The easiest way to share any sound online.
+                                </p>
+                            </div>
+                            <button class="b2">Read more<span class="chevron-icon"></button>
                         </div>
-                        <button>Read more</button>
                     </div>
-                </div>
-                <div class="card">
-                    <div class="portrait">
+                    <div class="card">
                         <div class="rectangle audacity"></div>
-                        <div class="title-subtitle">
-                            <h4>Audacity</h4>
-                            <p class="b1">
-                                The world's most popular audio editing and recording app.
-                            </p>
+                        <div class="portrait">
+                            <div class="title-subtitle">
+                                <h4>Audacity</h4>
+                                <p class="b1">
+                                    The world's most popular audio editing and recording app.
+                                </p>
+                            </div>
+                            <button class="b2">Read more<span class="chevron-icon"></button>
                         </div>
-                        <button>Read more</button>
                     </div>
                 </div>
             </div>
         </section>
-        <section class="socials">
-            <div class="social-icons">
-                <a href="#" target="_blank"><img src="./assets/socials/instagram.svg"></a>
-                <a href="#" target="_blank"><img src="./assets/socials/telegram.svg"></a>
-                <a href="#" target="_blank"><img src="./assets/socials/linkedIn.svg"></a>
-                <a href="#" target="_blank"><img src="./assets/socials/facebook.svg"></a>
+        <section>
+            <div class="socials">
+                <div class="social-icons">
+                    <a href="#" target="_blank"><img src="./assets/socials/instagram.svg" alt="Instagram"></a>
+                    <a href="#" target="_blank"><img src="./assets/socials/telegram.svg" alt="Telegram"></a>
+                    <a href="#" target="_blank"><img src="./assets/socials/linkedIn.svg" alt="LinkedIn"></a>
+                    <a href="#" target="_blank"><img src="./assets/socials/facebook.svg" alt="Facebook"></a>
+                </div>
+                <p class="b2">
+                    You're not just a student - you're part of a vibrant community of like-minded individuals united by
+                    a passion for frontend development. Collaborate, innovate, and grow alongside fellow learners and
+                    industry professionals as you embark on this exciting journey together.
+                </p>
             </div>
-            <p class="b2">
-                You're not just a student - you're part of a vibrant community of like-minded individuals united by a
-                passion for frontend development. Collaborate, innovate, and grow alongside fellow learners and industry
-                professionals as you embark on this exciting journey together.
-            </p>
         </section>
     </main>
     <footer>
