Adding email validation after submission

--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
                 </p>
                 <img src="./assets/img/heroImage.png" alt="Man enjoying playing the guitar">
                 <p class="b2">Are you ready to turn your passion for technology into a thriving career?</p>
-                <div class="invite-form">
-                    <input type="email" name="email" placeholder="Email" />
-                    <button class="b2">Join<img src="./assets/icons/arrowRight.svg" alt="Arrow right icon"></button>
-                </div>
+                <form class="invite-form" method="post" id="invite-form">
+                    <input id="email" name="email" placeholder="Email" />
+                    <button class="b2" type="submit">Join<img src="./assets/icons/arrowRight.svg"
+                            alt="Arrow right icon"></button>
+                </form>
             </div>
         </section>
         <section>
@@ -106,6 +107,7 @@
             <a class="b3" href="#" target="_blank">Terms of Service</a>
         </div>
     </footer>
+    <script src="./scripts/script.js"></script>
 </body>
 
 </html>
