Rename css selectors for text, fixing button

--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html>
 <html lang="en">
 
 <head>
@@ -15,16 +14,15 @@
         <section class="hero">
             <div class="hero-content">
                 <h1>Muse Group Frontend Academy</h1>
-                <p class="b1">
+                <p class="text-large">
                     Our academy offers a transformative learning experience designed to empower you with the skills and
                     knowledge needed to succeed in the ever-evolving field of frontend development.
                 </p>
                 <img src="./assets/img/heroImage.png" alt="Man enjoying playing the guitar">
-                <p class="b2">Are you ready to turn your passion for technology into a thriving career?</p>
+                <p class="text-medium">Are you ready to turn your passion for technology into a thriving career?</p>
                 <form class="invite-form" method="post" id="invite-form">
                     <input id="email" name="email" placeholder="Email" />
-                    <button class="b2" type="submit">Join<img src="./assets/icons/arrowRight.svg"
-                            alt="Arrow right icon"></button>
+                    <button class="text-medium" type="submit">Join<span class="arrow-right-icon"></span></button>
                 </form>
             </div>
         </section>
@@ -37,12 +35,12 @@
                         <div class="portrait">
                             <div class="title-subtitle">
                                 <h4>Ultimate Guitar</h4>
-                                <p class="b1">
+                                <p class="text-large">
                                     The best platform for music makers to play songs they love. Home to the world's
                                     largest music community.
                                 </p>
                             </div>
-                            <button class="b2">Read more<span class="chevron-icon"></button>
+                            <button class="text-medium">Read more<span class="chevron-icon"></span></button>
                         </div>
                     </div>
                     <div class="card">
@@ -50,11 +48,11 @@
                         <div class="portrait">
                             <div class="title-subtitle">
                                 <h4>MuseScore</h4>
-                                <p class="b1">
+                                <p class="text-large">
                                     Create, play back, and print sheet music with free open source notation software.
                                 </p>
                             </div>
-                            <button class="b2">Read more<span class="chevron-icon"></button>
+                            <button class="text-medium">Read more<span class="chevron-icon"></span></button>
                         </div>
                     </div>
                     <div class="card">
@@ -62,11 +60,11 @@
                         <div class="portrait">
                             <div class="title-subtitle">
                                 <h4>audio.com</h4>
-                                <p class="b1">
+                                <p class="text-large">
                                     The easiest way to share any sound online.
                                 </p>
                             </div>
-                            <button class="b2">Read more<span class="chevron-icon"></button>
+                            <button class="text-medium">Read more<span class="chevron-icon"></span></button>
                         </div>
                     </div>
                     <div class="card">
@@ -74,11 +72,11 @@
                         <div class="portrait">
                             <div class="title-subtitle">
                                 <h4>Audacity</h4>
-                                <p class="b1">
+                                <p class="text-large">
                                     The world's most popular audio editing and recording app.
                                 </p>
                             </div>
-                            <button class="b2">Read more<span class="chevron-icon"></button>
+                            <button class="text-medium">Read more<span class="chevron-icon"></span></button>
                         </div>
                     </div>
                 </div>
@@ -92,7 +90,7 @@
                     <a href="#" target="_blank"><img src="./assets/socials/linkedIn.svg" alt="LinkedIn"></a>
                     <a href="#" target="_blank"><img src="./assets/socials/facebook.svg" alt="Facebook"></a>
                 </div>
-                <p class="b2">
+                <p class="text-medium">
                     You're not just a student - you're part of a vibrant community of like-minded individuals united by
                     a passion for frontend development. Collaborate, innovate, and grow alongside fellow learners and
                     industry professionals as you embark on this exciting journey together.
@@ -102,9 +100,9 @@
     </main>
     <footer>
         <div class="additional-info">
-            <a class="b3" href="#" target="_blank">Help Center</a>
-            <a class="b3" href="#" target="_blank">Privacy Policy</a>
-            <a class="b3" href="#" target="_blank">Terms of Service</a>
+            <a class="text-small" href="#" target="_blank">Help Center</a>
+            <a class="text-small" href="#" target="_blank">Privacy Policy</a>
+            <a class="text-small" href="#" target="_blank">Terms of Service</a>
         </div>
     </footer>
     <script src="./scripts/script.js"></script>
